--- a/views/auctions/edit.ejs
+++ b/views/auctions/edit.ejs
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Редактировать пользователя</title>
+    <title>Edytuj aukcję</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h1>Редактировать пользователя</h1>
-<form action="/users/edit/<%= user._id %>?_method=PUT" method="POST">
-    <label for="username">Имя пользователя:</label>
-    <input type="text" id="username" name="username" value="<%= user.username %>" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" value="<%= user.email %>" required>
-    <br>
-    <label for="password">Пароль:</label>
-    <input type="password" id="password" name="password">
-    <br>
-    <button type="submit">Сохранить изменения</button>
-</form>
-<a href="/users">Назад</a>
+<%- include('../partials/header') %>
+<div class="container">
+    <h1>Edytuj aukcję</h1>
+    <form action="/auctions/edit/<%= auction._id %>?_method=PUT" method="POST">
+        <label for="title">Tytuł:</label>
+        <input type="text" id="title" name="title" value="<%= auction.title %>" required>
+        <br>
+        <label for="description">Opis:</label>
+        <textarea id="description" name="description" required><%= auction.description %></textarea>
+        <br>
+        <label for="currentPrice">Obecna cena:</label>
+        <input type="number" id="currentPrice" name="currentPrice" value="<%= auction.currentPrice %>" required>
+        <br>
+        <label for="endDate">Data zakończenia:</label>
+        <input type="date" id="endDate" name="endDate" value="<%= auction.endDate.toISOString().substring(0, 10) %>" required>
+        <br>
+        <button type="submit">Zapisz zmiany</button>
+    </form>
+    <a href="/auctions" class="btn">Powrót</a>
+</div>
 </body>
 </html>
