--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация</title>
+    <title>Rejestracja</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h1>Регистрация</h1>
-<% if (errors && errors.length > 0) { %>
-    <% errors.forEach(function(error) { %>
-        <div><%= error.msg %></div>
-    <% }) %>
-<% } %>
-<form action="/auth/register" method="POST">
-    <label for="username">Имя пользователя:</label>
-    <input type="text" id="username" name="username" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br>
-    <label for="password">Пароль:</label>
-    <input type="password" id="password" name="password" required>
-    <br>
-    <label for="password2">Повторите пароль:</label>
-    <input type="password" id="password2" name="password2" required>
-    <br>
-    <label for="isAdmin">Администратор:</label>
-    <input type="checkbox" id="isAdmin" name="isAdmin">
-    <br>
-    <button type="submit">Зарегистрироваться</button>
-</form>
-<a href="/auth/login">Вход</a>
+<%- include('partials/header') %>
+<div class="container">
+    <h1>Rejestracja</h1>
+    <% if (errors && errors.length > 0) { %>
+        <% errors.forEach(function(error) { %>
+            <div class="error"><%= error.msg %></div>
+        <% }); %>
+    <% } %>
+    <form action="/auth/register" method="POST">
+        <label for="username">Nazwa użytkownika:</label>
+        <input type="text" id="username" name="username" required>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br>
+        <label for="password">Hasło:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
+        <label for="password2">Potwierdź hasło:</label>
+        <input type="password" id="password2" name="password2" required>
+        <br>
+        <div class="checkbox-container">
+            <label for="isAdmin">Administrator:</label>
+            <input type="checkbox" id="isAdmin" name="isAdmin">
+        </div>
+        <br>
+        <button type="submit">Zarejestruj się</button>
+    </form>
+</div>
 </body>
 </html>
