--- a/views/users/add.ejs
+++ b/views/users/add.ejs
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Добавить пользователя</title>
+    <title>Dodaj użytkownika</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h1>Добавить пользователя</h1>
-<form action="/users/add" method="POST">
-    <label for="username">Имя пользователя:</label>
-    <input type="text" id="username" name="username" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br>
-    <label for="password">Пароль:</label>
-    <input type="password" id="password" name="password" required>
-    <br>
-    <button type="submit">Добавить</button>
-</form>
-<a href="/users">Назад</a>
+<%- include('../partials/header') %>
+<div class="container">
+    <h1>Dodaj użytkownika</h1>
+    <form action="/users/add" method="POST">
+        <label for="username">Nazwa użytkownika:</label>
+        <input type="text" id="username" name="username" required>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br>
+        <label for="password">Hasło:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
+        <button type="submit">Dodaj</button>
+    </form>
+</div>
 </body>
 </html>
