--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Редактировать пользователя</title>
+    <title>Edytuj użytkownika</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h1>Редактировать пользователя</h1>
-<form action="/users/edit/<%= user._id %>?_method=PUT" method="POST">
-    <label for="username">Имя пользователя:</label>
-    <input type="text" id="username" name="username" value="<%= user.username %>" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" value="<%= user.email %>" required>
-    <br>
-    <label for="password">Пароль:</label>
-    <input type="password" id="password" name="password">
-    <br>
-    <button type="submit">Сохранить изменения</button>
-</form>
-<form action="/users/delete/<%= user._id %>?_method=DELETE" method="POST">
-    <button type="submit">Удалить пользователя</button>
-</form>
-<a href="/users">Назад</a>
+<%- include('../partials/header') %>
+<div class="container">
+    <h1>Edytuj użytkownika</h1>
+    <form action="/users/edit/<%= user._id %>?_method=PUT" method="POST">
+        <label for="username">Nazwa użytkownika:</label>
+        <input type="text" id="username" name="username" value="<%= user.username %>" required>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" value="<%= user.email %>" required>
+        <br>
+        <label for="password">Hasło:</label>
+        <input type="password" id="password" name="password">
+        <br>
+        <button type="submit">Zapisz zmiany</button>
+    </form>
+    <form action="/users/delete/<%= user._id %>?_method=DELETE" method="POST">
+        <button type="submit">Usuń użytkownika</button>
+    </form>
+</div>
 </body>
 </html>
