--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,7 +60,7 @@ nav a:hover {
 
 .checkbox-container {
     display: flex;
-    align-items: center;
+    align-auctions: center;
 }
 
 .checkbox-container label {
