--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel Administratora</title>
+    <title>Panel administratora</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <%- include('../partials/header') %>
 <div class="container">
-    <h1>Panel Administratora</h1>
+    <h1>Panel administratora</h1>
     <a href="/admin/users" class="btn">Zarządzanie użytkownikami</a>
     <a href="/admin/auctions" class="btn">Zarządzanie aukcjami</a>
 </div>
