--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,9 +16,9 @@
         <div class="error"><%= error_msg %></div>
     <% } %>
     <h2>Witamy, <%= user.username %>!</h2>
-    <a href="/items" class="btn">Przejdź do aukcji</a>
-    <a href="/items/my-items" class="btn">Moje aukcje</a>
-    <a href="/items/add" class="btn">Dodaj aukcję</a>
+    <a href="/auctions" class="btn">Przejdź do aukcji</a>
+    <a href="/auctions/my-auctions" class="btn">Moje aukcje</a>
+    <a href="/auctions/add" class="btn">Dodaj aukcję</a>
 </div>
 </body>
 </html>
