--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     <h2>O Auctioneria</h2>
     <p>Witamy na Auctioneria, Twoim najlepszym wyborze dla aukcji online! Na naszej stronie możesz wystawiać na sprzedaż różne przedmioty i brać udział w ich kupnie. Oferujemy platformę do wygodnego i bezpiecznego prowadzenia aukcji. Zarejestruj się i zacznij kupować i sprzedawać już dziś!</p>
     <p>Kliknij przycisk poniżej, aby przeglądać aktualne aukcje:</p>
-    <a href="/items" class="btn">Przejdź do aukcji</a>
+    <a href="/auctions" class="btn">Przejdź do aukcji</a>
 </div>
 </body>
 </html>
