--- a/views/items/add.ejs
+++ b/views/items/add.ejs
@@ -10,7 +10,7 @@
 <%- include('../partials/header') %>
 <div class="container">
     <h1>Dodaj przedmiot na aukcję</h1>
-    <form action="/items/add" method="POST">
+    <form action="/auctions/add" method="POST">
         <label for="title">Tytuł:</label>
         <input type="text" id="title" name="title" required>
         <br>
