--- a/views/auctions/add.ejs
+++ b/views/auctions/add.ejs
@@ -7,21 +7,22 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<%- include('../partials/header') %>
-<div class="container">
+<header>
     <h1>Dodaj przedmiot na aukcję</h1>
+    <nav>
+        <a href="/auth/dashboard">Panel użytkownika</a>
+    </nav>
+</header>
+<div class="container">
     <form action="/auctions/add" method="POST">
-        <label for="title">Tytuł:</label>
+        <label for="title">Nazwa:</label>
         <input type="text" id="title" name="title" required>
         <br>
         <label for="description">Opis:</label>
         <textarea id="description" name="description" required></textarea>
         <br>
-        <label for="startBid">Cena wywoławcza:</label>
-        <input type="number" id="startBid" name="startBid" required>
-        <br>
-        <label for="endDate">Data zakończenia:</label>
-        <input type="date" id="endDate" name="endDate" required>
+        <label for="price">Cena:</label>
+        <input type="number" id="price" name="price" required>
         <br>
         <button type="submit">Dodaj</button>
     </form>
