--- a/views/auctions/index.ejs
+++ b/views/auctions/index.ejs
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zarządzaj aukcjami</title>
+    <title>Przedmioty na aukcji</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <%- include('../partials/header') %>
 <div class="container">
-    <h1>Moje aukcje</h1>
-    <a href="/auctions/add" class="btn">Dodaj przedmiot na aukcję</a>
     <% if (success_msg) { %>
         <div class="success"><%= success_msg %></div>
     <% } %>
@@ -20,14 +18,40 @@
     <ul>
         <% auctions.forEach(function(auction) { %>
             <li>
-                <strong><%= auction.title %></strong><br>
-                <%= auction.description %><br>
-                Cena wywoławcza: <%= auction.initialPrice %> PLN<br>
-                Obecna cena: <%= auction.currentPrice %> PLN<br>
-                <a href="/auctions/edit/<%= auction._id %>" class="btn">Edytuj</a>
-                <form action="/auctions/delete/<%= auction._id %>?_method=DELETE" method="POST" style="display:inline;">
-                    <button type="submit" class="btn">Usuń</button>
-                </form>
+                <div>
+                    <strong><%= auction.title %></strong><br>
+                    <%= auction.description %><br>
+                    Cena początkowa: <%= auction.initialPrice %> PLN<br>
+                    Cena bieżąca: <%= auction.currentPrice %> PLN<br>
+                    <% if (auction.user) { %>
+                        Sprzedawca: <%= auction.user.username %><br>
+                    <% } %>
+                    <% if (auction.buyer) { %>
+                        Kupił: <%= auction.buyer.username %><br>
+                    <% } %>
+                </div>
+                <div>
+                    <% if (user && auction.user && auction.user._id && !auction.user._id.equals(user._id)) { %>
+                        <% if (!auction.buyer || (auction.buyer && !auction.buyer.equals(user._id))) { %>
+                            <% if (auction.buyer) { %>
+                                <form action="/auctions/buy/<%= auction._id %>" method="POST" style="display:inline;">
+                                    <input type="number" name="newPrice" min="<%= auction.currentPrice + 1 %>" required>
+                                    <button type="submit">Przebij cenę i kup</button>
+                                </form>
+                            <% } else { %>
+                                <form action="/auctions/buy/<%= auction._id %>" method="POST" style="display:inline;">
+                                    <input type="hidden" name="newPrice" value="<%= auction.currentPrice %>">
+                                    <button type="submit">Kup za bieżącą cenę</button>
+                                </form>
+                            <% } %>
+                        <% } %>
+                    <% } %>
+                    <% if (user && auction.user && auction.user._id && auction.user._id.equals(user._id)) { %>
+                        <form action="/auctions/delete/<%= auction._id %>?_method=DELETE" method="POST" style="display:inline;">
+                            <button type="submit">Usuń</button>
+                        </form>
+                    <% } %>
+                </div>
             </li>
         <% }); %>
     </ul>
