--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <h1>Witamy na Auctioneria!</h1>
     <nav>
         <a href="/">Strona główna</a>
-        <a href="/auth/dashboard">Panel użytkownika</a>
+        <a href="/auth/dashboard">Panel aukcyjny</a>
         <% if (user && user.isAdmin) { %>
             <a href="/admin/dashboard">Panel administratora</a>
         <% } %>
