--- a/views/auctions/add.ejs
+++ b/views/auctions/add.ejs
@@ -10,7 +10,7 @@
 <header>
     <h1>Dodaj przedmiot na aukcję</h1>
     <nav>
-        <a href="/auth/dashboard">Panel użytkownika</a>
+        <a href="/auth/dashboard">Panel aukcyjny</a>
     </nav>
 </header>
 <div class="container">
