--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,7 +33,7 @@
             <input type="checkbox" id="isAdmin" name="isAdmin">
         </div>
         <br>
-        <button type="submit">Zarejestruj się</button>
+        <button type="submit">Rejestracja</button>
     </form>
 </div>
 </body>
