--- a/views/auctions/userAuctions.ejs
+++ b/views/auctions/userAuctions.ejs
@@ -32,26 +32,10 @@
                     <% } %>
                 </div>
                 <div>
-                    <% if (user && auction.user && auction.user._id && !auction.user._id.equals(user._id)) { %>
-                        <% if (!auction.buyer || (auction.buyer && !auction.buyer.equals(user._id))) { %>
-                            <% if (auction.buyer) { %>
-                                <form action="/auctions/buy/<%= auction._id %>" method="POST" style="display:inline;">
-                                    <input type="number" name="newPrice" min="<%= auction.currentPrice + 1 %>" required>
-                                    <button type="submit">Przebij cenę i kup</button>
-                                </form>
-                            <% } else { %>
-                                <form action="/auctions/buy/<%= auction._id %>" method="POST" style="display:inline;">
-                                    <input type="hidden" name="newPrice" value="<%= auction.currentPrice %>">
-                                    <button type="submit">Kup za bieżącą cenę</button>
-                                </form>
-                            <% } %>
-                        <% } %>
-                    <% } %>
-                    <% if (user && auction.user && auction.user._id && auction.user._id.equals(user._id)) { %>
-                        <form action="/auctions/delete/<%= auction._id %>?_method=DELETE" method="POST" style="display:inline;">
-                            <button type="submit">Usuń</button>
-                        </form>
-                    <% } %>
+                    <a href="/auctions/edit/<%= auction._id %>" class="btn">Edytuj</a>
+                    <form action="/auctions/delete/<%= auction._id %>?_method=DELETE" method="POST" style="display:inline;">
+                        <button type="submit">Usuń</button>
+                    </form>
                 </div>
             </li>
         <% }); %>
