--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aukcje</title>
+    <title>Panel aukcyjny</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
@@ -15,7 +15,8 @@
     <% if (error_msg) { %>
         <div class="error"><%= error_msg %></div>
     <% } %>
-    <h2>Witaj, <%= user.username %>!</h2>
+    <h2>Witaj, <%= user.email %>!</h2>
+    <p>To jest twoja strona z aukcjami, na której możesz przeglądać, dodawać, edytować i usuwać swoje aukcje.</p>
     <a href="/auctions/my-auctions" class="btn">Moje aukcje</a>
     <a href="/auctions/add" class="btn">Dodaj aukcję</a>
 </div>
